<?xml version="1.0"?>
<package format="3">
  <name>lidar_lite_v3hp</name>
  <version>1.0.0</version>
  <description>The lidar_lite_v3hp package</description>
  <maintainer email="carma@todo.todo">carma</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>message_filters</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cav_msgs</depend>

  <export>
   
  </export>
</package>
